# poetry-pint-issue-dep

./: pyproject.toml
tests/: test_poetry_pint_issue_dep.py
