[tool.poetry]
name = "poetry-pint-issue-dep"
version = "0.1.0"
description = ""
authors = ["Hielke Walinga <hielkewalinga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pint = "^0.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
